--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,9 @@ hr {
 
 footer {
     text-align: center;
-    padding: 1rem;
+    justify-content: center;
+    align-items: center;
+    padding: 3px;
     background-color: #007bff;
     color: white;
     position: fixed;
@@ -124,12 +126,26 @@ button#reiniciar-button {
 
 button#reiniciar-button:hover {
     background-color: #c82333;
+    
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.5);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
 
 header img {
     display: block;
     margin: 0 auto;
-    width: 200px; 
+    width: 200px;
+    animation: pulse 4s infinite ease-in-out;
 }
 
 th, td {
@@ -146,15 +162,32 @@ footer img {
     margin-right: 20px; 
 }
 
+@keyframes slide {
+    0% {
+        transform: translateX(0%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
 .team-banner {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
     background-color: #f0f0f0; 
     padding: 10px 0;
+    overflow: hidden;
+    position: relative;
+}
+
+.team-banner .inner {
+    display: flex;
+    animation: slide 40s linear infinite;
 }
 
 .team-banner img {
     height: 50px; 
-    margin: 0 10px; 
+    margin: 0 10px;
+    flex-shrink: 0; 
 }
